syntax = "proto3";

option go_package = ".;fight";

package fight;

import "google/protobuf/timestamp.proto";

service FightSvc {
    // here stream is used to trans a big mount of data.
    rpc ListHeros (ListHerosRequest) returns (stream Hero);
    rpc LoadSession (LoadSessionRequest) returns (SessionView);
    rpc SelectHero (SelectHeroRequest) returns (SessionView);
    rpc Game (GameRequest) returns (GameResponse);

    // here stream is used to keep the long-alive connection and get real top10
    rpc Top10 (Top10Request) returns (stream Top10Response);

    rpc Admin (stream AdminRequest) returns (stream AdminResponse);
}

message AdminRequest {
    enum Type {
        CREATE_HERO = 0;
        ADJUST_HERO = 1;
    }
    repeated Hero heros = 1;
    Type type = 2;
}

message AdminResponse {
    repeated Hero heros = 1;
}

message Top10Request {}

message Top10Response {
    message Player {
        string id = 1;
        int32 score = 2;
        int32 level = 3;
    }
    repeated Player players = 1;
}

enum Type {
    FIGHT = 0;
    ARCHIVE = 1;
    LEVEL = 2;
    QUIT = 3;
}

message GameRequest {
    Type type = 1;
    string id = 2;
}

message GameResponse {
    Type type = 1;
    oneof value {
        Fight fight = 2;
        Archive archive = 3;
        Level level = 4;
        Quit quit = 5;
    }
}

message Fight {
    bool game_over = 1;
    bool next_level = 2;
    int32 score = 3;
    int32 hero_blood = 4;
    int32 boss_blood = 5;
}

message Archive {
    string msg = 1;
    string session_id = 2;
}

message Level {
    string msg = 1;
    Session session = 2;
}

message Quit {
    string msg = 1;
}

message SelectHeroRequest {
    string id = 1;
    string hero_name = 2;
}

message LoadSessionRequest {
    string id = 1;
}

message SessionView {
    Hero hero = 1;
    Boss boss = 2;
    Session session = 3;
}

message ListHerosRequest {}

message Hero {
    string name = 1;
    string details = 2;
    int32 attack_power = 3;
    int32 defense_power = 4;
    int32 blood = 5;
}

message Boss {
    string name = 1;
    string details = 2;
    int32 attack_power = 3;
    int32 defense_power = 4;
    int32 blood = 5;
    int32 level = 6;
}

message Session {
    string UID = 1;
    string hero_name = 2;
    int32 live_hero_blood = 3;
    int32 live_boss_blood = 4;
    int32 current_level = 5;
    int32 score = 6;
    google.protobuf.Timestamp archive_date = 7;
}
